--- a/gb/21/4/29/n12914429.md
+++ b/gb/21/4/29/n12914429.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dltxxv330/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/dltxxv330/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/dltxxv330/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dltxxv330/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/dltxxv330/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dltxxv330/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/dltxxv330/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dltxxv330/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/dltxxv330/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dltxxv330/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/dltxxv330/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dltxxv330/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/dltxxv330/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dltxxv330/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/dltxxv330/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dltxxv330/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/dltxxv330/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/dltxxv330/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/dltxxv330/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/dltxxv330/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dltxxv330/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dltxxv330/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dltxxv330/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dltxxv330/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>周晓辉：东方红曲调来自情歌 延安进行文革预演</h2>
 
 <h6></h6>
 <hr>
-	<p>【大纪元2021年04月30日讯】在中共几十年如一日的反复播放下，吹捧毛泽东的歌曲<ahref="https://github.com/dltxxv330/djy/blob/master/gb/tag/%E3%80%8A%E4%B8%9C%E6%96%B9%E7%BA%A2%E3%80%8B.md#1">《东方红》</a>可说是家喻户晓。迄今为止，大陆一些地方整点报时依旧采用的是该曲调。</p>
-<p>不过很多人不知道的是，<ahref="https://github.com/dltxxv330/djy/blob/master/gb/tag/%E3%80%8A%E4%B8%9C%E6%96%B9%E7%BA%A2%E3%80%8B.md#1">《东方红》</a>的曲调取材于陕北情歌《骑白马》，而《骑白马》则是根据流传了百年的山西西北情歌《芝麻油》改编而成的。改编者是一个在小学任教的名叫李锦祺的老师，他在整风期间的1943年上半年，将《骑白马》重新填了三段词，并改名为《东方红》。1944年又由诗人公木将二三段改编成了现在这个将毛无限吹捧、无限崇拜的样子。</p>
-<p>为什么当时的延安会掀起对毛无限崇拜的风潮？这显然与毛发起的<ahref="https://github.com/dltxxv330/djy/blob/master/gb/tag/%E5%BB%B6%E5%AE%89%E6%95%B4%E9%A3%8E.md#1">延安整风</a>运动有着直接关联。也因此其重要性，在中共百集洗脑微纪录片《百炼成钢：中国共产党的100年》花了整整一集，来讲述延安整风。</p>
+	<p>【大纪元2021年04月30日讯】在中共几十年如一日的反复播放下，吹捧毛泽东的歌曲<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E3%80%8A%E4%B8%9C%E6%96%B9%E7%BA%A2%E3%80%8B.md#1">《东方红》</a>可说是家喻户晓。迄今为止，大陆一些地方整点报时依旧采用的是该曲调。</p>
+<p>不过很多人不知道的是，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E3%80%8A%E4%B8%9C%E6%96%B9%E7%BA%A2%E3%80%8B.md#1">《东方红》</a>的曲调取材于陕北情歌《骑白马》，而《骑白马》则是根据流传了百年的山西西北情歌《芝麻油》改编而成的。改编者是一个在小学任教的名叫李锦祺的老师，他在整风期间的1943年上半年，将《骑白马》重新填了三段词，并改名为《东方红》。1944年又由诗人公木将二三段改编成了现在这个将毛无限吹捧、无限崇拜的样子。</p>
+<p>为什么当时的延安会掀起对毛无限崇拜的风潮？这显然与毛发起的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BB%B6%E5%AE%89%E6%95%B4%E9%A3%8E.md#1">延安整风</a>运动有着直接关联。也因此其重要性，在中共百集洗脑微纪录片《百炼成钢：中国共产党的100年》花了整整一集，来讲述延安整风。</p>
 <p>在讲述整风的第二十集开篇中，中共称从1942年春天开始，中共在全党范围内发动了一场长达三年的整风运动。随即主动抛出问题，即“为什么中共要以如此大的力量和这样长的时间来进行一场整风运动?”简言之，就是要统一思想。此后又简单讲述了整风层次和过程，最后总结了整风的意义，其中重要一条是确立了毛在全党的领导地位。</p>
-<p>然而，中共不愿说也不敢说的是整风运动中的残酷和后果。目前，对于<ahref="https://github.com/dltxxv330/djy/blob/master/gb/tag/%E5%BB%B6%E5%AE%89%E6%95%B4%E9%A3%8E.md#1">延安整风</a>运动最为翔实的研究者是已故的南京大学历史系教授<ahref="https://github.com/dltxxv330/djy/blob/master/gb/tag/%E9%AB%98%E5%8D%8E.md#1">高华</a>，他所撰写的《红太阳是怎样升起的——延安整风运动的来龙去脉》和中共党史专家何方所撰写的《党史笔记》，让我们看到了中共党史和洗脑片有意隐瞒的真相。</p>
+<p>然而，中共不愿说也不敢说的是整风运动中的残酷和后果。目前，对于<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BB%B6%E5%AE%89%E6%95%B4%E9%A3%8E.md#1">延安整风</a>运动最为翔实的研究者是已故的南京大学历史系教授<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%AB%98%E5%8D%8E.md#1">高华</a>，他所撰写的《红太阳是怎样升起的——延安整风运动的来龙去脉》和中共党史专家何方所撰写的《党史笔记》，让我们看到了中共党史和洗脑片有意隐瞒的真相。</p>
 <p>何方认为，“整风”其实就是要把延安以及党内的一切党员干部培养成崇拜领袖的驯服工具。事实也的确如此，毛发动的目的就是希望借此建立自己的思想体系，即树立“实用第一”的观点，一切对中共夺取政权没有帮助的马列书都被称作“教条”。肃清自由、民主、个性解放思想在党内知识分子的影响，确立“领袖至上”、“集体至上”、“个人渺小”的观念，树立“农民是中国革命的主力军”的观念。使用感化和暴力手段，培养忠顺的中共党员和组织。</p>
 <p>为了实现自己的目地，毛在整风运动中是极尽其所能，甚至采用了一些流氓手法，比如公然篡改党史，将有碍自己形象的如吹捧“蒋委员长”的文字删除；使用流氓语言，批判其他中共留过苏的王明、张闻天等领导人和知识分子，称他们是“连猪都不如的蠢货”。</p>
-<p>再比如采用“引蛇出洞”手法，就是鼓励人们发表意见，然后再加以打倒。天真的知识分子<ahref="https://github.com/dltxxv330/djy/blob/master/gb/tag/%E7%8E%8B%E5%AE%9E%E5%91%B3.md#1">王实味</a>发表了《野百合花》一文，批评了延安的等级制度，如“衣分三色，食分五等”；此外，王实味还将矛头指向其顶头上司、研究院领导人罗迈。</p>
-<p><ahref="https://github.com/dltxxv330/djy/blob/master/gb/tag/%E7%8E%8B%E5%AE%9E%E5%91%B3.md#1">王实味</a>的文章一出现，即轰动延安，他也因此很快被定性为“反革命托派奸细分子”、“反党五人集团成员”、“暗藏的国民党特务”，并在“审干”过程中遭到迫害。作家萧军曾当面请求毛从轻发落王实味，毛却不让他管，称其“问题复杂，不是一般思想意识错误”。</p>
+<p>再比如采用“引蛇出洞”手法，就是鼓励人们发表意见，然后再加以打倒。天真的知识分子<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%8E%8B%E5%AE%9E%E5%91%B3.md#1">王实味</a>发表了《野百合花》一文，批评了延安的等级制度，如“衣分三色，食分五等”；此外，王实味还将矛头指向其顶头上司、研究院领导人罗迈。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%8E%8B%E5%AE%9E%E5%91%B3.md#1">王实味</a>的文章一出现，即轰动延安，他也因此很快被定性为“反革命托派奸细分子”、“反党五人集团成员”、“暗藏的国民党特务”，并在“审干”过程中遭到迫害。作家萧军曾当面请求毛从轻发落王实味，毛却不让他管，称其“问题复杂，不是一般思想意识错误”。</p>
 <p>1943年4月1日，负责“审干”的康生下令将王实味正式逮捕。1947年王实味被秘密杀死后，置于一口枯井中掩埋。而毛这招“引蛇出洞”在以后的运动中一再使用，那些像王实味这般坦言批评中共的，基本没有一个有好下场。</p>
 <p>显然，王实味说实话的下场只是整风运动中的一个缩影，而运动中的残酷远超人们的想像。对此，《红太阳》一书中披露了很多真实的材料，读来，让人惊愕不已。</p>
 <p>如“1942年12月，延安的秋夜，已有几许寒意，但是，窑洞里却灯火通明。……一批批外来的青年知识分子正在被抢救……历史稍微复杂、社会关系又不甚清晰的怀疑物件对象，正在一批一批地集中起来，被送到反审机关审查…… 1943年4月10日以后，审干由内部转为公开，开展了群众性的坦白运动……特务一批一批被查出来，真可谓已经到了草木皆兵的地步。而外地来的同志也逐渐的人人自危了……有的单位对90%以上的成员进行抢救，使正常工作处于停顿状态…… ”</p>
@@ -36,41 +36,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/17/1/29/n8758753.md#1">北大才子王实味和他滴血的野百合花</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/17/4/12/n9029846.md#1">刘晓：不可饶恕的《阿里郎》与《东方红》</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/17/4/17/n9046126.md#1">丁抒：双百方针与延安整风</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/27/n12908179.md#1">中共罪行录之十一：延安整风</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/1/29/n8758753.md#1">北大才子王实味和他滴血的野百合花</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/4/12/n9029846.md#1">刘晓：不可饶恕的《阿里郎》与《东方红》</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/4/17/n9046126.md#1">丁抒：双百方针与延安整风</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/4/27/n12908179.md#1">中共罪行录之十一：延安整风</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11180153.md#1" target="_blank">【征文】章阁：中国古代专制吗（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11237722.md#1" target="_blank">美国麻州众议院颁发褒奖状 祝贺法轮大法日</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/8/n10202468.md#1" target="_blank">林辉：“爱有阶级性”后的人伦惨剧</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/5/n11769925.md#1" target="_blank">见证大法超常 屏东法轮功学员在法中熔炼</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/26/n12905575.md#1">“我跟你回家好不好？” 台网友曝榕树托梦</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/24/n12903028.md#1">【小宇宙传说】死亡是生命结束？天上有摄像机</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/15/n12880731.md#1">【馨香雅句】王羲之的书法老师竟是她</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/23/n12899457.md#1">【命理】混迹绿林怎能得福寿善报？</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/23/n12900792.md#1">不丹小王子前世曾为中国僧人</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/29/n12914019.md#1">【唐浩视界】台湾战力有风险？中共十劫临头</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/28/n12911917.md#1">【探索时分】史上4大长途空袭 航程绕地球1周</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/29/n12914766.md#1">【时事纵横】腾讯危险？中国人口数据为何难产</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/27/n12909414.md#1">【新闻看点】习一脸愁容风传 5大事态预示不祥？</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/28/n12910609.md#1">北京调查马云牵出 “总理候选人”李强</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/28/n12912137.md#1">【远见快评】习自曝下台凶兆 借古喻今错位</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/28/n12910549.md#1">郎祖筠遭“邮局简讯”诈骗 存款消失火速报警</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/29/n12913139.md#1">谢祖武“2个儿子”金榜题名 竟同校又同系</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/27/n12909289.md#1">随周润发天天行山 79岁男星爆对方暖心细节</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/28/n12911929.md#1">汤唯与金泰勇补拍新片 朴宝剑暖心送餐车</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/28/n12910023.md#1">日本票选K-POP男团人气榜 BTS夺冠SJ也入选</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/28/n12910544.md#1">大陆旅客向飞机扔硬币“祈福” 害航班取消</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/28/n12910770.md#1">为何长子长女的性格与其他孩子不同？</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/23/n12899777.md#1">食物发霉切掉再吃？4种情况别食用 当心伤肝致癌</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/27/n12908846.md#1">要想一整天都精力旺盛？ 勿错过两种早餐食谱</a></li>
-<li><a href="https://github.com/dltxxv330/djy/blob/master/gb/21/4/27/n12908332.md#1">网红分享FBI的谈判绝招 让你无往不利</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/dltxxv330/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/dltxxv330/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/29/n12914429.htm">周晓辉：东方红曲调来自情歌 延安进行文革预演</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/29/n12914429.htm">周晓辉：东方红曲调来自情歌 延安进行文革预演</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/dltxxv330/djy/blob/master/gb/21/4/29/n12914429.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dltxxv330/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dltxxv330/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dltxxv330/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dltxxv330/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dltxxv330/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/4/29/n12914429.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
